added AMP project and overlay to alfresco repo and share projects alfresco-web-integration-parent now provides clean (alf_data) and amp overlay (removed override.properties convention) features minor fixes