@@ -15,9 +15,7 @@
 
     <properties>
         <!-- Jetty configurations used by Runner -->
-        <jetty.port>8080</jetty.port>
-        <jetty.stopPort>8876</jetty.stopPort>
-        <jetty.jvmArgs>-Xms256m -Xmx1G -XX:PermSize=256m</jetty.jvmArgs>
+        <jetty.port>8088</jetty.port>
 
         <!-- Context names used by webapps -->
         <webapp.name>${project.artifactId}</webapp.name>
@@ -42,6 +40,92 @@
 
     <build>
         <finalName>${webapp.name}</finalName>
+
+        <plugins>
+            <!-- Maven resources plugin is (mis)used here to create an
+            empty folder; could/should be maven-amp-plugin's role -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>create-empty-folder</id>
+                        <phase>process-resources</phase>
+                        <goals><goal>copy-resources</goal></goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/ampoverlays</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>.</directory>
+                                    <excludes>
+                                        <exclude>**</exclude>
+                                    </excludes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- All artifacts with AMP extensions are unpacked
+            using a WAR layout on an empty folder; AMP to WAR
+            mapping is provided by maven-amp-plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack-amps</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeTypes>amp</includeTypes>
+                            <outputDirectory>${project.build.directory}/ampoverlays</outputDirectory>
+                            <excludes>META*</excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.alfresco.maven.plugin</groupId>
+                        <artifactId>maven-amp-plugin</artifactId>
+                        <version>${maven.amp.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <!-- All AMP unpacking target folder is included into
+            the WAR being produced -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webResources>
+                        <resource>
+                            <directory>${project.build.directory}/ampoverlays</directory>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.basedir}/${alfresco.data.location.name}</directory>
+                        </fileset>
+                        <fileset>
+                            <directory>${project.basedir}</directory>
+                            <includes>
+                                <include>**.log</include>
+                                <include>${alfresco.data.location.name}</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <profiles>
@@ -105,54 +189,6 @@
             </build>
         </profile>
         <profile>
-            <id>enable-amp-overlay</id>
-            <activation>
-                <file>
-                    <exists>overlay.properties</exists>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>unpack-amps</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>unpack-dependencies</goal>
-                                </goals>
-                                <configuration>
-                                    <includeTypes>amp</includeTypes>
-                                    <outputDirectory>${project.build.directory}/ampoverlays</outputDirectory>
-                                    <excludes>META*</excludes>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.alfresco.maven.plugin</groupId>
-                                <artifactId>maven-amp-plugin</artifactId>
-                                <version>${maven.amp.version}</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <configuration>
-                            <webResources>
-                                <resource>
-                                    <directory>${project.build.directory}/ampoverlays</directory>
-                                </resource>
-                            </webResources>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>enable-embedded-jetty</id>
             <activation>
                 <file>
@@ -161,6 +197,7 @@
             </activation>
             <build>
                 <plugins>
+                    <!-- @TODO - needs to be moved on a separate profile with a different activation -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-clean-plugin</artifactId>
@@ -188,7 +225,7 @@
                                 <goals><goal>copy-resources</goal></goals>
                                 <phase>process-resources</phase>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}</outputDirectory>
+                                    <outputDirectory>target</outputDirectory>
                                     <resources>
                                         <resource>
                                             <directory>${project.basedir}/jetty</directory>
@@ -203,6 +240,12 @@
                         <groupId>org.mortbay.jetty</groupId>
                         <artifactId>maven-jetty-plugin</artifactId>
                         <configuration>
+                            <connectors>
+                                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                                    <port>${jetty.port}</port>
+                                    <maxIdleTime>60000</maxIdleTime>
+                                </connector>
+                            </connectors>
                         </configuration>
                         <dependencies>
                             <dependency>
